repl — fix L3 module restriction for classpath-launched subprocesses
Followup to 4a2dbc3. Empirical testing exposed that
--limit-modules ai.singlr.repl,... crashed the subprocess JVM at boot
layer init with "Module ai.singlr.repl not found" whenever the
bootstrap was launched from classpath (the non-JPMS path) — classpath
JARs are unnamed-module members, not observable named modules, so
naming them in --limit-modules is fatal.

Fix: SubprocessModules.REQUIRED_ROOTS no longer includes
ai.singlr.repl; the bootstrap module name lives in a separate
BOOTSTRAP_MODULE constant. JvmSandbox.buildLaunchCommand appends it to
--limit-modules only when parentUsesModulePath(parentArgs) is true.
Classpath launches get the JDK-only baseline; the bootstrap loads via
classpath into the unnamed module which can read every observable JDK
module.

SubprocessModules.limitModulesArg now takes a modulepathLaunch boolean
from JvmSandbox. Breaking for direct callers of the previous zero-arg
form, but the type is internal-facing and the JVM-launch logic is the
only realistic consumer.

Empirically verified with a new SubprocessModulesClasspathLaunchTest
(3 tests) that manually constructs a classpath-only launch command (no
--module-path, no --add-modules ai.singlr.repl) and runs the bootstrap
via Unix-domain RPC. Proves the subprocess starts, java.sql is absent
from the boot layer, and java.net.http is also stripped — stricter than
modulepath launch because module-info "requires" clauses are ignored
for classpath JARs.

SubprocessModulesTest updated to cover both modulepathLaunch=true and
modulepathLaunch=false paths. 791 repl tests passing.